[package]
name = "limelightlib-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "limelightlib_rust"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
thiserror = "1.0"
tracing = "0.1"
url = "2.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Added features

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"